# eco_pediatrics

./: .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  AI_GUIDELINES.md  ARCHITECTURAL_PLAN.md  CLAUDE.md  CODE_REVIEW_LATEST.md  CONTEXT_SNAPSHOT.md  ERROR_MONITOR_ARCHITECTURE.md  NEXT_STEPS.md  README.md  TROUBLESHOOTING.md  easy_start.bat  eco.bat  error_monitor.py  mealgrid_full.txt  n  pytest_output.txt  run_dev.bat  security_output.txt  seed_data.bat  start_backend.bat  start_backend_pc.bat  start_frontend.bat
.agent/workflows/: error_monitor.md
.cursor/rules/: workflow-analyze.mdc  workflow-finalize.mdc
.jules/: bolt.md
backend/: .env.example  PERFORMANCE_REPORT.md  add_delete_policies.sql  apply_migration_check.py  check_admissions.py  check_key_role.py  check_rls.py  check_status.py  check_table.py  cleanup_database.sql  cleanup_duplicates.py  database.py  debug_data.py  debug_delete.py  debug_target_meals.py  debug_target_meals_v2.py  debug_token.py  debug_token_v2.py  dependencies.py  discharge_stale_310_1.py  fix_audit_log_type.sql  fix_document_requests_rls.sql  fix_policy.sql  fix_timestamps.py  full_scan_report.txt  inspect_conflict.py  inspect_tokens.py  logger.py  main.py  models.py  pyproject.toml  read_scan.py  requirements-core.txt  requirements.txt  resolve_duplicate.py  run_seed_meals.py  scan_results.txt  schemas.py  search_error.py  seed_data.py  (+10 more)
backend/constants/: __init__.py  mappings.py  meal_config.py
backend/migrations/: 001_expand_meal_requests.sql  002_add_created_at_to_meal_requests.sql  003_add_date_time_to_meal_requests.sql  004_add_requested_meal_types.sql  20260214_meal_plans.sql  20260215_add_indexes.sql  consolidated_fix_pgrst205.sql  fix_audit_logs_rls.sql  fix_audit_logs_rpc.sql  fix_dashboard_view_v2.sql  fix_meal_requests_rpc.sql  optimize_architecture.sql
backend/routers/: admissions.py  dev.py  exams.py  iv_records.py  meals.py  station.py  vitals.py
backend/scripts/: apply_migration_check.py  check_admissions.py  check_key_role.py  check_rls.py  check_status.py  check_table.py  cleanup_duplicates.py  debug_data.py  debug_delete.py  debug_target_meals.py  debug_token.py  debug_token_v2.py  discharge_stale_310_1.py  fix_timestamps.py  inspect_conflict.py  inspect_tokens.py  read_scan.py  resolve_duplicate.py  run_seed_meals.py  seed_data.py  verify_fix.py  verify_seeded_results.py  verify_total_meals.py
backend/services/: admission_service.py  dashboard.py  dev_service.py  iv_service.py  meal_service.py  station_service.py
backend/tests/: test_admissions_logic_mock.py  test_dashboard_contract.py  test_dashboard_explicit_columns.py  test_dashboard_includes_completed_docs.py  test_dashboard_schema_regression.py  test_dev_ui_env.py  test_env_integrity.py  test_meals_schema_fallback.py  test_optimization.py  test_station_optimizations.py  test_utils.py  test_verify_scripts_encoding.py  test_websocket_cleanup.py  test_ws_sanity_local.py
config/: paths.ps1
docs/: AGENTS.md  AI_COMMAND_PROTOCOL.md  ARK_UI_MIGRATION_PLAN.md  CHANGELOG.md  CRITICAL_LOGIC.md  DEVELOPMENT_STANDARDS.md  DEV_ENVIRONMENT.md  ERROR_MONITOR_ARCHITECTURE.md  ERROR_MONITOR_DEBUG_PROMPT.md  FRONTEND_RENDER_OPTIMIZATION.md  IMPROVEMENT_ROADMAP.md  IV_LABEL_PRINTING_SYSTEM.md  PROMPT_STATION_DEV_BUTTONS_MISSING.md  README.md  REFACTOR_DOCS_PLAN.md  SECURITY_REVIEW.md  SESSION_2026-02-20.md  SESSION_2026-02-23.md  TROUBLESHOOTING.md  TROUBLESHOOTING_WT_LAYOUT.md  VERIFICATION_GLOBAL_RULES.md  WORKFLOW_30MIN_AI_CODING.md  checklist.md  context.md  memory.md  mission.md
docs/archive/: LATEST_SUMMARY_AND_IMPROVEMENTS.md  PROMPT_ECO_BAT_OPTION2_CRASH.md  REFACTOR_DOCS_PLAN.md  VERIFICATION_DOCS_AUDIT_2026_03_03.md  repomix_report.md
docs/plans/: code-quality-audit.md  docs-consolidation.md  fix_frontend_startup_error.md  phase4a-backend-dependency-audit.md  (+5 more)
frontend/: .env.example  .env.local  build_error.txt  build_error_2.txt  build_error_3.txt  next.config.js  package-lock.json  package.json  tailwind.config.js  tauri_init_help.txt  tsc_output.txt  tsconfig.json  tsconfig.tsbuildinfo
logs/: sdk_ver.txt  wt_debug.txt
scripts/: Fix-BatEncoding.ps1  Get-SdkVersion.ps1  Invoke-DocsRefactor.ps1  Invoke-Repomix.ps1  Optimize-Network.ps1  Refresh-BuildEnv.ps1  Save-EcoBatAscii.ps1  Setup-Environment.ps1  Shared-DocsConstants.ps1  Start-Backend.ps1  Start-Frontend.ps1  Verify-DocsLinks.ps1  check_encoding.py  doctor.py  launch_wt_dev.ps1  save_bat_cp949.py  security_check.py
supabase/: schema.sql
(+260 files in other folders)
