[project]
name = "eco-pediatrics-backend"
version = "0.1.0"
description = "Eco-Pediatrics FastAPI backend"
requires-python = ">=3.14"
dependencies = [
    # --- CORE: 직접 임포트 ---
    "fastapi==0.128.7",
    "starlette==0.52.1",
    "uvicorn==0.40.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "supabase==2.28.0",
    "supabase-auth==2.28.0",
    "supabase-functions==2.28.0",
    "storage3==2.28.0",
    "postgrest==2.28.0",
    "realtime==2.28.0",
    "loguru==0.7.3",
    "python-dotenv==1.2.1",
    "httpx==0.28.1",
    "python-multipart==0.0.22",
    "pyjwt==2.11.0",
    "requests==2.32.5",
    # --- CORE: 전이적 의존성 ---
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "certifi==2026.1.4",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "cryptography==46.0.3",
    "deprecation==2.1.0",
    "h11==0.16.0",
    "h2==4.3.0",
    "hpack==4.1.0",
    "httpcore==1.0.9",
    "hyperframe==6.1.0",
    "idna==3.11",
    "msgpack==1.1.2",
    "multidict==6.7.1",
    "propcache==0.4.1",
    "pycparser==2.23",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pywin32==311",
    "pywin32-ctypes==0.2.3",
    "sniffio==1.3.1",
    "tenacity==9.1.4",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.3",
    "urllib3==2.6.2",
    "websocket-client==1.9.0",
    "websockets==15.0.1",
    "win32-setctime==1.2.0",
    "wsproto==1.3.2",
    "yarl==1.22.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-cov>=7.0",
    # --- 정적 분석 / 린트 ---
    "astroid==4.0.4",
    "isort==7.0.0",
    "mccabe==0.7.0",
    "mypy==1.19.1",
    "mypy-extensions==1.1.0",
    "pylint==4.0.4",
    # --- 테스트 지원 ---
    "coverage==7.13.1",
    "iniconfig==2.3.0",
    "pluggy==1.6.0",
    # --- 타입 스텁 ---
    "types-google-cloud-ndb==2.4.0.20251217",
    "types-requests==2.32.4.20260107",
    # --- 빌드·개발 도구 ---
    "pathspec==1.0.4",
    "platformdirs==4.5.1",
    "setuptools==80.9.0",
    "watchdog==6.0.0",
    "ruff>=0.15.5",
]
tools = [
    # --- GUI 프레임워크 ---
    "customtkinter==5.2.2",
    "darkdetect==0.8.0",
    "flet==0.80.5",
    "flet-cli==0.80.5",
    "flet-desktop==0.80.5",
    # --- AI / Google API ---
    "cachetools==6.2.6",
    "google-ai-generativelanguage==0.6.15",
    "google-api-core==2.25.2",
    "google-api-python-client==2.189.0",
    "google-auth==2.48.0",
    "google-auth-httplib2==0.3.0",
    "google-auth-oauthlib==1.2.4",
    "google-generativeai==0.8.6",
    "googleapis-common-protos==1.72.0",
    "grpcio==1.78.0",
    "grpcio-status==1.71.2",
    "httplib2==0.31.2",
    "oauthlib==3.3.1",
    "proto-plus==1.27.1",
    "protobuf==5.29.6",
    "pyasn1==0.6.2",
    "pyasn1-modules==0.4.2",
    "requests-oauthlib==2.0.0",
    "rsa==4.9.1",
    "uritemplate==4.2.0",
    # --- 브라우저 자동화 ---
    "attrs==25.4.0",
    "greenlet==3.3.0",
    "outcome==1.3.0.post0",
    "playwright==1.57.0",
    "playwright-stealth==2.0.0",
    "pyee==13.0.0",
    "pysocks==1.7.1",
    "selenium==4.39.0",
    "sortedcontainers==2.4.0",
    "trio==0.32.0",
    "trio-websocket==0.12.2",
    "undetected-chromedriver==3.5.5",
    "webdriver-manager==4.0.2",
    # --- 데이터 처리 ---
    "beautifulsoup4==4.14.3",
    "chardet==5.2.0",
    "dill==0.4.1",
    "et-xmlfile==2.0.0",
    "fsspec==2026.2.0",
    "lxml==6.0.2",
    "mmh3==5.2.0",
    "numpy==2.4.2",
    "olefile==0.47",
    "openpyxl==3.1.5",
    "pandas==2.3.3",
    "pillow==12.1.0",
    "pymupdf==1.26.7",
    "pyhwp==0.1b15",
    "pyhwpx==1.6.6",
    "pyiceberg==0.11.0",
    "pyroaring==1.0.3",
    "qrcode==8.2",
    "soupsieve==2.8.1",
    "tqdm==4.67.3",
    "zstandard==0.25.0",
    # --- 빌드·패키징 ---
    "altgraph==0.17.5",
    "pefile==2024.8.26",
    "pyinstaller==6.17.0",
    "pyinstaller-hooks-contrib==2025.11",
    # --- DB 직접 연결 ---
    "peewee==3.19.0",
    "psycopg2-binary==2.9.11",
    # --- 프로젝트 템플릿·도구 ---
    "arrow==1.4.0",
    "binaryornot==0.4.4",
    "colorama==0.4.6",
    "cookiecutter==2.6.0",
    "jinja2==3.1.6",
    "librt==0.7.8",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "mdurl==0.1.2",
    "packaging==25.0",
    "psutil==7.2.1",
    "pygments==2.19.2",
    "pyperclip==1.11.0",
    "pyparsing==3.3.2",
    "python-slugify==8.0.4",
    "pyyaml==6.0.3",
    "repath==0.9.0",
    "rich==14.3.2",
    "six==1.17.0",
    "strictyaml==1.7.3",
    "text-unidecode==1.3",
    "tomlkit==0.14.0",
]
